fix: align with hero styles

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -19,6 +19,7 @@ main .carousel h2 {
   font-size: var(--heading-font-size-l);
   font-weight: 400;
   line-height: .8;
+  text-shadow: 0 0 10px #0008;
 }
 
 @media (min-width: 700px) {
